--- a/lab_session7/gpulab_test.ipynb
+++ b/lab_session7/gpulab_test.ipynb
@@ -112,7 +112,8 @@
    "execution_count": 3,
    "metadata": {
     "pycharm": {
-     "is_executing": false
+     "is_executing": false,
+     "name": "#%%\n"
     }
    },
    "outputs": [],
@@ -122,7 +123,10 @@
    "cell_type": "markdown",
    "metadata": {
     "colab_type": "text",
-    "id": "IWC1ntdosLRp"
+    "id": "IWC1ntdosLRp",
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    },
    "source": [
     "**Note** *test()* function is a function to watch your agent play the game after training. Call the following function by passing your trained model and environment name as parameter.\n",
@@ -138,7 +142,8 @@
     "colab_type": "code",
     "id": "DJkdSXHWsLRr",
     "pycharm": {
-     "is_executing": false
+     "is_executing": false,
+     "name": "#%%\n"
     }
    },
    "outputs": [],
@@ -189,7 +194,10 @@
    "cell_type": "markdown",
    "metadata": {
     "colab_type": "text",
-    "id": "OS5QZWCDsLR1"
+    "id": "OS5QZWCDsLR1",
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    },
    "source": [
     "#### Set cuda"
@@ -203,7 +211,8 @@
     "colab_type": "code",
     "id": "ctEbKR3_sLR2",
     "pycharm": {
-     "is_executing": false
+     "is_executing": false,
+     "name": "#%%\n"
     }
    },
    "outputs": [
@@ -225,7 +234,10 @@
    "cell_type": "markdown",
    "metadata": {
     "colab_type": "text",
-    "id": "QreopiqusLR_"
+    "id": "QreopiqusLR_",
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    },
    "source": [
     "#### Cart Pole Environment"
@@ -239,7 +251,8 @@
     "colab_type": "code",
     "id": "hfQdbkwGsLSB",
     "pycharm": {
-     "is_executing": false
+     "is_executing": false,
+     "name": "#%%\n"
     }
    },
    "outputs": [],
@@ -252,7 +265,10 @@
    "cell_type": "markdown",
    "metadata": {
     "colab_type": "text",
-    "id": "h7RPE34bsLSM"
+    "id": "h7RPE34bsLSM",
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    },
    "source": [
     "#### Epsilon greedy exploration\n",
@@ -292,7 +308,8 @@
     "id": "8We9mg0LsLSV",
     "outputId": "038862a3-2b6d-4b75-8304-ec9c8d51759e",
     "pycharm": {
-     "is_executing": false
+     "is_executing": false,
+     "name": "#%%\n"
     }
    },
    "outputs": [
@@ -323,7 +340,10 @@
    "cell_type": "markdown",
    "metadata": {
     "colab_type": "text",
-    "id": "BJlyPWCZsLSj"
+    "id": "BJlyPWCZsLSj",
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    },
    "source": [
     "### Deep Q-Network"
@@ -378,7 +398,8 @@
     "colab_type": "code",
     "id": "HnrOd5OGsLSw",
     "pycharm": {
-     "is_executing": false
+     "is_executing": false,
+     "name": "#%%\n"
     }
    },
    "outputs": [],
@@ -395,7 +416,10 @@
    "cell_type": "markdown",
    "metadata": {
     "colab_type": "text",
-    "id": "j5ReYOClsLTD"
+    "id": "j5ReYOClsLTD",
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    },
    "source": [
     "#### Computing Temporal Difference Loss"
@@ -520,7 +544,8 @@
     "id": "GedJCkAEsLTX",
     "outputId": "e3e59612-a715-4aef-ad5d-44ed1ffed77d",
     "pycharm": {
-     "is_executing": false
+     "is_executing": false,
+     "name": "#%%\n"
     }
    },
    "outputs": [
@@ -580,7 +605,10 @@
    "cell_type": "markdown",
    "metadata": {
     "colab_type": "text",
-    "id": "iLh3kVOAsLTh"
+    "id": "iLh3kVOAsLTh",
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    },
    "source": [
     "#### Experience Replay\n",
@@ -605,7 +633,8 @@
     "colab_type": "code",
     "id": "TIQVMpGAsLTi",
     "pycharm": {
-     "is_executing": false
+     "is_executing": false,
+     "name": "#%%\n"
     }
    },
    "outputs": [],
@@ -622,7 +651,10 @@
    "cell_type": "markdown",
    "metadata": {
     "colab_type": "text",
-    "id": "uNAi8VmysLTr"
+    "id": "uNAi8VmysLTr",
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    },
    "source": [
     "#### Replay Buffer"
@@ -636,7 +668,8 @@
     "colab_type": "code",
     "id": "nAWdNXgnsLTw",
     "pycharm": {
-     "is_executing": false
+     "is_executing": false,
+     "name": "#%%\n"
     }
    },
    "outputs": [],
@@ -672,7 +705,10 @@
    "cell_type": "markdown",
    "metadata": {
     "colab_type": "text",
-    "id": "q4zq_anbsLT5"
+    "id": "q4zq_anbsLT5",
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    },
    "source": [
     "#### Compute TD loss\n",
@@ -689,7 +725,8 @@
     "colab_type": "code",
     "id": "3QYnGY_KsLT6",
     "pycharm": {
-     "is_executing": false
+     "is_executing": false,
+     "name": "#%%\n"
     }
    },
    "outputs": [],
@@ -745,7 +782,10 @@
    "cell_type": "markdown",
    "metadata": {
     "colab_type": "text",
-    "id": "-qcjlbBTsLUE"
+    "id": "-qcjlbBTsLUE",
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    },
    "source": [
     "As mentioned previously, DQN itself is not stable but we stablise it by multiple methods. Replay buffer is one of them. <br>\n",
@@ -764,7 +804,8 @@
     "id": "WyHzgdw_sLUG",
     "outputId": "aac65b5e-dcaf-421b-b92d-3038a7d000c4",
     "pycharm": {
-     "is_executing": false
+     "is_executing": false,
+     "name": "#%%\n"
     }
    },
    "outputs": [
@@ -836,7 +877,10 @@
    "cell_type": "markdown",
    "metadata": {
     "colab_type": "text",
-    "id": "CO4C9q0fsLUR"
+    "id": "CO4C9q0fsLUR",
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    },
    "source": [
     "We saw in the *Deep Q Learning* that, when we want to calculate the TD error (aka the loss), we calculate the difference between the TD target (Q_target) and the current Q value (estimation of Q). <br>\n",
@@ -866,7 +910,8 @@
     "colab_type": "code",
     "id": "ecgOkkj1sLUU",
     "pycharm": {
-     "is_executing": false
+     "is_executing": false,
+     "name": "#%%\n"
     }
    },
    "outputs": [],
@@ -885,7 +930,10 @@
    "cell_type": "markdown",
    "metadata": {
     "colab_type": "text",
-    "id": "trsSLQ0WsLUf"
+    "id": "trsSLQ0WsLUf",
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    },
    "source": [
     "#### Sync model"
@@ -923,7 +971,8 @@
     "colab_type": "code",
     "id": "uDEKgBuVsLUp",
     "pycharm": {
-     "is_executing": false
+     "is_executing": false,
+     "name": "#%%\n"
     }
    },
    "outputs": [],
@@ -936,7 +985,10 @@
    "cell_type": "markdown",
    "metadata": {
     "colab_type": "text",
-    "id": "q_SgFm5-sLUv"
+    "id": "q_SgFm5-sLUv",
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    },
    "source": [
     "#### Compute TD loss"
@@ -999,7 +1051,8 @@
     "colab_type": "code",
     "id": "udGjk7phsLU-",
     "pycharm": {
-     "is_executing": false
+     "is_executing": false,
+     "name": "#%%\n"
     }
    },
    "outputs": [
@@ -1073,7 +1126,10 @@
    "cell_type": "markdown",
    "metadata": {
     "colab_type": "text",
-    "id": "ake4dpTtsLVJ"
+    "id": "ake4dpTtsLVJ",
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    },
    "source": [
     "Let's try adding Replay buffer"
@@ -1087,7 +1143,8 @@
     "colab_type": "code",
     "id": "sdH7aqL0sLVK",
     "pycharm": {
-     "is_executing": false
+     "is_executing": false,
+     "name": "#%%\n"
     }
    },
    "outputs": [],
@@ -1108,7 +1165,10 @@
    "cell_type": "markdown",
    "metadata": {
     "colab_type": "text",
-    "id": "l5qK68J8sLVS"
+    "id": "l5qK68J8sLVS",
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    },
    "source": [
     "#### Compute TD loss"
@@ -1173,7 +1233,8 @@
     "id": "-8XrW3gpsLVc",
     "outputId": "9add27c3-5cdd-4c79-dc42-22e04ed755ba",
     "pycharm": {
-     "is_executing": true
+     "is_executing": true,
+     "name": "#%%\n"
     }
    },
    "outputs": [
@@ -1247,7 +1308,10 @@
    "cell_type": "markdown",
    "metadata": {
     "colab_type": "text",
-    "id": "hU98OvXCsLVm"
+    "id": "hU98OvXCsLVm",
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    },
    "source": [
     "The target based DQN in early stages is naive, we use the action that maximizes the Q-value[next_state]. But in the early stage, this is a noisy approximation so we tend to overestimate the Q-value.\n",
@@ -1341,7 +1405,8 @@
     "colab_type": "code",
     "id": "MSDlVhDnsLVy",
     "pycharm": {
-     "is_executing": true
+     "is_executing": true,
+     "name": "#%%\n"
     }
    },
    "outputs": [],
@@ -1394,7 +1459,10 @@
    "cell_type": "markdown",
    "metadata": {
     "colab_type": "text",
-    "id": "0pjbGzB8sLV6"
+    "id": "0pjbGzB8sLV6",
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    },
    "source": [
     "### Dueling Deep Q Networks\n",
@@ -1467,7 +1535,8 @@
     "colab_type": "code",
     "id": "3Av8jJq8sLV_",
     "pycharm": {
-     "is_executing": true
+     "is_executing": true,
+     "name": "#%%\n"
     }
    },
    "outputs": [],
@@ -1488,7 +1557,10 @@
    "cell_type": "markdown",
    "metadata": {
     "colab_type": "text",
-    "id": "lNWqC70osLWG"
+    "id": "lNWqC70osLWG",
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    },
    "source": [
     "#### Synchronize current policy net and target net"
@@ -1566,7 +1638,8 @@
     "colab_type": "code",
     "id": "Hl3u9ERssLWZ",
     "pycharm": {
-     "is_executing": true
+     "is_executing": true,
+     "name": "#%%\n"
     }
    },
    "outputs": [],
@@ -1620,7 +1693,10 @@
    "cell_type": "markdown",
    "metadata": {
     "colab_type": "text",
-    "id": "T1u1xePhsLWi"
+    "id": "T1u1xePhsLWi",
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    },
    "source": [
     "# Plot comparison of all agents"
@@ -1634,7 +1710,8 @@
     "colab_type": "code",
     "id": "Cz4TuvDBsLWj",
     "pycharm": {
-     "is_executing": true
+     "is_executing": true,
+     "name": "#%%\n"
     }
    },
    "outputs": [],
@@ -1647,6 +1724,25 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "test(env_id, model_base)\n",
+    "test(env_id, model_batch)\n",
+    "test(env_id, current_model_target)\n",
+    "test(env_id, current_model_dqn)\n",
+    "test(env_id, current_model_ddqn)\n",
+    "test(env_id, current_model_dueldqn)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
    "metadata": {
     "colab_type": "text",
     "id": "B8wDjwsUsLWs",
@@ -1656,12 +1752,7 @@
     }
    },
    "source": [
-    "test(env_id, model_base)\n",
-    "test(env_id, model_batch)\n",
-    "test(env_id, current_model_target)\n",
-    "test(env_id, current_model_dqn)\n",
-    "test(env_id, current_model_ddqn)\n",
-    "test(env_id, current_model_dueldqn)"
+    "## Playing atari Pong with Double DQN"
    ],
    "execution_count": null,
    "outputs": []
